В гилп файл добавлена "слежка" за изменениями в Файле .pug

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <p>Hello мир!</p>
-        <p>Это pug</p>
+        <p>He he ; )</p>
+        <p>Vrey cool thing!</p>
     </body>
 </html>
