Пустая html страница. Все готово для старта!

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <p>He he ; )</p>
-        <p>Vrey cool thing!</p>
+        <p>nothing yet</p>
     </body>
 </html>
