грубая верстка макета сайта с использованием методологии БЭМ. Нужно доработать шапку и все остальное

--- a/app/index.html
+++ b/app/index.html
@@ -28,5 +28,15 @@
                 <div class="caption content__caption"><span class="caption__text">our services</span></div>
             </div>
         </header>
+        <!--Тело сайта-->
+        <main class="main">
+            <!-- Контент для тела сайта-->
+            <div class="content main__content content_theme-grey"></div>
+        </main>
+        <!--Футер сайта-->
+        <footer class="footer">
+            <!-- Контент для футера сайта-->
+            <div class="content footer__content content_theme-grey"></div>
+        </footer>
     </body>
 </html>
