грубая верстка макета сайта с использованием методологии БЭМ. Основа для главного содержимого сайта

--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
             </div>
         </header>
         <!--Тело сайта-->
-        <main class="main">
+        <div class="main main_theme-white-gr">
             <!-- Контент для тела сайта-->
-            <div class="content main__content content_theme-grey"></div>
-        </main>
+            <div class="main__content main__content-inner main__content_theme-grey"></div>
+        </div>
         <!--Футер сайта-->
         <footer class="footer">
             <!-- Контент для футера сайта-->
