грубая верстка макета сайта с использованием методологии БЭМ. Макет для главного содержимого сайта готов

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,12 @@
         <!--Тело сайта-->
         <div class="main main_theme-white-gr">
             <!-- Контент для тела сайта-->
-            <div class="main__content main__content-inner main__content_theme-grey"></div>
+            <div class="main__content main__content-inner main__content_theme-grey">
+                <!--Колонка для всего остального-->
+                <aside class="main__column-aside main__column-inner-right"></aside>
+                <!--Колонка для главного содержимого сайта-->
+                <main class="main__column-main main__column-inner-left"></main>
+            </div>
         </div>
         <!--Футер сайта-->
         <footer class="footer">
