--- a/app/index.html
+++ b/app/index.html
@@ -38,15 +38,105 @@
             <!-- Контент для тела сайта-->
             <div class="main__content main__content-inner main__content_theme-grey">
                 <!--Колонка для всего остального-->
-                <aside class="main__column-aside main__column-inner-right"></aside>
+                <aside class="main__column-aside main__column-inner-right">
+                    <div class="unit unit_theme-blue">
+                        <h2 class="unit__title unit__title_theme-head-aside">popular posts</h2>
+                        <p class="unit__mark unit__mark_theme-blue-white">12 february, 2015</p>
+                        <h3 class="unit__title unit__title_theme-head-aside-small">Project Design and Engineering Services</h3>
+                        <p class="unit__mark unit__mark_theme-blue-white">23 comments</p>
+                        <hr class="unit__horizontal unit__horizontal_white-solid">
+                    </div>
+                    <div class="unit unit_theme-pdf-icon-yellow"><span class="unit__icon-caption unit__icon-caption_uppercase-text-black">download price</span></div>
+                    <div class="unit unit_theme-blue">
+                        <h2 class="unit__title unit__title_theme-head-aside">subscribe</h2>
+                        <hr class="unit__horizontal unit__horizontal_white-solid">
+                    </div>
+                    <div class="unit unit_theme-star-icon-yellow"><span class="unit__icon-caption unit__icon-caption_uppercase-text-black">Work with us</span></div>
+                </aside>
                 <!--Колонка для главного содержимого сайта-->
-                <main class="main__column-main main__column-inner-left"></main>
+                <main class="main__column-main main__column-inner-left">
+                    <div class="main__double-unit">
+                        <div class="unit unit_theme-info">
+                            <h3 class="unit__title unit__title_theme-head">General Contracting</h3>
+                            <hr class="unit__horizontal unit__horizontal_black-solid">
+                            <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                        </div>
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">1</span></div>
+                        </div>
+                    </div>
+                    <div class="main__double-unit">
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">2</span></div>
+                        </div>
+                        <div class="unit unit_theme-info">
+                            <h3 class="unit__title unit__title_theme-head">Project design and engineering</h3>
+                            <hr class="unit__horizontal unit__horizontal_black-solid">
+                            <p class="unit__article unit__article_theme-text">Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.</p>
+                        </div>
+                    </div>
+                    <div class="main__double-unit">
+                        <div class="unit unit_theme-info">
+                            <h3 class="unit__title unit__title_theme-head">Capital Improvements</h3>
+                            <hr class="unit__horizontal unit__horizontal_black-solid">
+                            <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                        </div>
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">3</span></div>
+                        </div>
+                    </div>
+                    <div class="main__double-unit">
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">4</span></div>
+                        </div>
+                        <div class="unit unit_theme-info">
+                            <h3 class="unit__title unit__title_theme-head">Construction</h3>
+                            <hr class="unit__horizontal unit__horizontal_black-solid">
+                            <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                        </div>
+                    </div>
+                    <div class="main__double-unit">
+                        <div class="unit unit_theme-info">
+                            <h3 class="unit__title unit__title_theme-head">Expert Witness</h3>
+                            <hr class="unit__horizontal unit__horizontal_black-solid">
+                            <p class="unit__article unit__article_theme-text">Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.</p>
+                        </div>
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">5</span></div>
+                        </div>
+                    </div>
+                    <div class="main__double-unit">
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">6</span></div>
+                        </div>
+                        <div class="unit unit_theme-info">
+                            <h3 class="unit__title unit__title_theme-head">Procurement</h3>
+                            <hr class="unit__horizontal unit__horizontal_black-solid">
+                            <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                        </div>
+                    </div>
+                </main>
             </div>
         </div>
         <!--Футер сайта-->
         <footer class="footer">
             <!-- Контент для футера сайта-->
-            <div class="content footer__content content_theme-grey"></div>
+            <div class="footer__content footer__inner footer__content_theme-grey">
+                <div class="footer__container"><span>2015 © Copyright - Foundation theme by Stylemixthemes</span>
+                    <!--Блок для меню-->
+                    <div class="menu content__menu">
+                        <ul class="menu__items">
+                            <li class="menu__item">Services</li>
+                            <li class="menu__item">OurWorks</li>
+                            <li class="menu__item">News & events</li>
+                            <li class="menu__item">Worck with us</li>
+                            <li class="menu__item">F.A.Q</li>
+                            <li class="menu__item">Contact us</li>
+                            <li class="menu__item">Shop</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
