Размещение частей страницы по отдельным папкам.

--- a/app/index.html
+++ b/app/index.html
@@ -118,21 +118,21 @@
                 </main>
             </div>
         </div>
-        <!--Футер сайта-->
+        <!--Футтер-->
         <footer class="footer">
             <!-- Контент для футера сайта-->
             <div class="footer__content footer__inner footer__content_theme-grey">
                 <div class="footer__container"><span>2015 © Copyright - Foundation theme by Stylemixthemes</span>
                     <!--Блок для меню-->
-                    <div class="menu content__menu">
+                    <div class="menu footer__container__menu-inner">
                         <ul class="menu__items">
-                            <li class="menu__item">Services</li>
-                            <li class="menu__item">OurWorks</li>
-                            <li class="menu__item">News & events</li>
-                            <li class="menu__item">Worck with us</li>
-                            <li class="menu__item">F.A.Q</li>
-                            <li class="menu__item">Contact us</li>
-                            <li class="menu__item">Shop</li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">Services</a></li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">OurWorks</a></li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">News & events</a></li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">Worck with us</a></li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">F.A.Q</a></li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">Contact us</a></li>
+                            <li class="menu__item"><a class="menu__item_text" href="#">Shop</a></li>
                         </ul>
                     </div>
                 </div>
