Футер и шапка готовы

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,12 @@
                         <ul class="menu__items">
                             <li class="menu__item menu__item_facebook-theme"><i class="fa fa-facebook" aria-hidden="true"></i></li>
                             <li class="menu__item menu__item_twitter-theme"><i class="fa fa-twitter" aria-hidden="true"></i></li>
-                            <li class="menu__item"><img src="../img/forma-1.png" alt="корзина"></li>
-                            <li class="menu__item"><img src="../img/menu.png" alt="меню"></li>
+                            <li class="menu__item menu__item_icon-theme">
+                                <div class="menu__item-layer"><img src="../img/forma-1.png" alt="корзина">
+                                    <div class="menu__icon-super menu__icon-super_theme-sq-yellow"><span class="menu__icon-super_theme-text">99</span></div>
+                                </div>
+                            </li>
+                            <li class="menu__item menu__item_icon-theme"><img src="../img/menu.png" alt="меню"></li>
                         </ul>
                     </div>
                     <!-- Название страницы-->
@@ -119,20 +123,21 @@
             </div>
         </div>
         <!--Футтер-->
-        <footer class="footer">
+        <footer class="footer footer_theme-white-grey">
             <!-- Контент для футера сайта-->
-            <div class="footer__content footer__inner footer__content_theme-grey">
-                <div class="footer__container"><span>2015 © Copyright - Foundation theme by Stylemixthemes</span>
+            <div class="footer__content footer__inner">
+                <div class="footer__container footer__container__container-inner">
+                    <div class="footer__container__text-inner footer_theme-text">2015 © Copyright - Foundation theme by<span class="footer_theme-text footer_theme-text-mark"> Stylemixthemes</span></div>
                     <!--Блок для меню-->
                     <div class="menu footer__container__menu-inner">
                         <ul class="menu__items">
-                            <li class="menu__item"><a class="menu__item_text" href="#">Services</a></li>
-                            <li class="menu__item"><a class="menu__item_text" href="#">OurWorks</a></li>
-                            <li class="menu__item"><a class="menu__item_text" href="#">News & events</a></li>
-                            <li class="menu__item"><a class="menu__item_text" href="#">Worck with us</a></li>
-                            <li class="menu__item"><a class="menu__item_text" href="#">F.A.Q</a></li>
-                            <li class="menu__item"><a class="menu__item_text" href="#">Contact us</a></li>
-                            <li class="menu__item"><a class="menu__item_text" href="#">Shop</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Services</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">OurWorks</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">News & events</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Worck with us</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">F.A.Q</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Contact us</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Shop</a></li>
                         </ul>
                     </div>
                 </div>
