добавлена форма ввода

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,12 @@
                     <div class="unit unit_theme-blue">
                         <h2 class="unit__title unit__title_theme-head-aside">subscribe</h2>
                         <hr class="unit__horizontal unit__horizontal_white-solid">
+                        <div class="unit__inner-form-aside">
+                            <form class="form">
+                                <input class="form__input form__input_theme-aside-input form__input_theme-text form__input_theme-blue-text" type="text" name="email" value="E-mail">
+                                <input class="form__submit form__submit_theme-aside-submit form__submit_theme-text form__submit_theme-white-text" type="submit" value="sign up">
+                            </form>
+                        </div>
                     </div>
                     <div class="unit unit_theme-star-icon-yellow"><span class="unit__icon-caption unit__icon-caption_uppercase-text-black">Work with us</span></div>
                 </aside>
