нормально расположены блоки главной страницы

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
                     <div class="unit unit_theme-star-icon-yellow"><span class="unit__icon-caption unit__icon-caption_uppercase-text-black">Work with us</span></div>
                 </aside>
                 <!--Колонка для главного содержимого сайта-->
-                <main class="main__column-main main__column-inner-left">
+                <main class="main__column-main main__column-main_theme-inline main__column-inner-left">
                     <div class="main__double-unit">
                         <div class="unit unit_theme-info">
                             <h3 class="unit__title unit__title_theme-head">General Contracting</h3>
@@ -96,33 +96,33 @@
                         </div>
                     </div>
                     <div class="main__double-unit">
-                        <div class="unit unit_theme-foto">
-                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">4</span></div>
-                        </div>
                         <div class="unit unit_theme-info">
                             <h3 class="unit__title unit__title_theme-head">Construction</h3>
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
                         </div>
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">4</span></div>
+                        </div>
                     </div>
                     <div class="main__double-unit">
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">5</span></div>
+                        </div>
                         <div class="unit unit_theme-info">
                             <h3 class="unit__title unit__title_theme-head">Expert Witness</h3>
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.</p>
                         </div>
-                        <div class="unit unit_theme-foto">
-                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">5</span></div>
-                        </div>
                     </div>
                     <div class="main__double-unit">
-                        <div class="unit unit_theme-foto">
-                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">6</span></div>
-                        </div>
                         <div class="unit unit_theme-info">
                             <h3 class="unit__title unit__title_theme-head">Procurement</h3>
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                        </div>
+                        <div class="unit unit_theme-foto">
+                            <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">6</span></div>
                         </div>
                     </div>
                 </main>
