--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
                         </div>
+                        <div class="unit__arrow unit__arrow_down"></div>
                         <div class="unit unit_theme-foto">
                             <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">1</span></div>
                         </div>
@@ -79,6 +80,7 @@
                         <div class="unit unit_theme-foto">
                             <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">2</span></div>
                         </div>
+                        <div class="unit__arrow unit__arrow_up"></div>
                         <div class="unit unit_theme-info">
                             <h3 class="unit__title unit__title_theme-head">Project design and engineering</h3>
                             <hr class="unit__horizontal unit__horizontal_black-solid">
@@ -91,6 +93,7 @@
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
                         </div>
+                        <div class="unit__arrow unit__arrow_down"></div>
                         <div class="unit unit_theme-foto">
                             <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">3</span></div>
                         </div>
@@ -101,6 +104,7 @@
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
                         </div>
+                        <div class="unit__arrow unit__arrow_down"></div>
                         <div class="unit unit_theme-foto">
                             <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">4</span></div>
                         </div>
@@ -109,6 +113,7 @@
                         <div class="unit unit_theme-foto">
                             <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">5</span></div>
                         </div>
+                        <div class="unit__arrow unit__arrow_up"></div>
                         <div class="unit unit_theme-info">
                             <h3 class="unit__title unit__title_theme-head">Expert Witness</h3>
                             <hr class="unit__horizontal unit__horizontal_black-solid">
@@ -121,6 +126,7 @@
                             <hr class="unit__horizontal unit__horizontal_black-solid">
                             <p class="unit__article unit__article_theme-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
                         </div>
+                        <div class="unit__arrow unit__arrow_down"></div>
                         <div class="unit unit_theme-foto">
                             <div class="unit__number unit__number_theme-yellow"><span class="unit__number unit__number_middle">6</span></div>
                         </div>
