--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,11 @@
                     <p class="unit__article unit__article--theme-unit-black-text">Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.</p>
                     <input class="button button--theme-unit-btn button--black-bg button--text-white unit__button-buttom-left" type="button" value="Read more">
                 </div>
+                <div class="unit unit--theme-info">
+                    <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
+                    <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/03</sup></span></div>
+                    <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
+                </div>
             </div>
         </div>
         <!--Футтер-->
