--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,13 @@
                     <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/03</sup></span></div>
                     <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
                 </div>
+                <div class="unit unit--theme-company-video unit--theme-blue">
+                    <div class="unit__company-video-wrap">
+                        <button class="icon icon--theme-circle icon--blue-bg">
+                            <div class="icon icon--theme-play-arrow"></div>
+                        </button><span class="unit__info unit__info--small-text unit__info--white-text">Company video</span>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Футтер-->
