--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,17 @@
                         </button><span class="unit__info unit__info--small-text unit__info--white-text">Company video</span>
                     </div>
                 </div>
+                <div class="unit unit--theme-info">
+                    <h2 class="unit__title unit__title--big-bold unit__title--text-width">Our services</h2>
+                    <hr class="unit__horizontal unit__horizontal--black-solid">
+                    <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
+                </div>
+                <div class="unit unit--theme-foto"></div>
+                <div class="unit unit--theme-info">
+                    <h3 class="unit__title unit__title--bold unit__title--text-width">General Contracting</h3>
+                    <hr class="unit__horizontal unit__horizontal--black-solid">
+                    <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                </div>
             </div>
         </div>
         <!--Футтер-->
