В home_page добавлен информационные блоки c иконкой contact us. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,12 @@
                         <div class="icon icon--theme-pdf"></div><span class="unit__info unit__info--small-text unit__info--black-text">Download price</span>
                     </div>
                 </div>
-                <div class="unit unit--theme-blue"></div>
+                <div class="unit unit--theme-blue">
+                    <div class="unit__contact-us-wrap">
+                        <div class="icon icon--theme-contact-circle"></div>
+                        <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-text unit__info--white-text">Contact us</span>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Футтер-->
