В home_page добавлен информационные блоки c аватаром райтингом и комментом. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -70,9 +70,15 @@
                         <form class="form">
                             <input class="form__input form__input--theme-unit-search form__input--border-bottom-only form__input--border-white" type="text" name="search-text" value="What you're looking for">
                             <button class="form__button form__button--right-button form__button--theme-search-button"><i class="form__button-icon fa fa-search" aria-hidden="true"></i></button>
-                            <!--input.form__button.form__button--right-button.form__button--theme-search-button(type="submit", value="O")-->
                         </form>
                     </div>
+                </div>
+                <div class="unit unit--horizontal-double-unit unit--white">
+                    <div class="unit__person-info-wrap">
+                        <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold-text">Martin H.Jhonsons</span>
+                        <div class="icon icon--person-rate4"></div>
+                    </div>
+                    <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
                 </div>
             </div>
         </div>
