--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,11 @@
                         <hr class="unit__horizontal unit__horizontal--black-solid unit__horizontal--width-small unit__horizontal--inline">
                     </div>
                 </div>
+                <div class="unit unit--white">
+                    <div class="icon icon--blue-square">
+                        <div class="icon icon--ligthinig-blue"></div>
+                    </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Expert Witness</span>
+                </div>
             </div>
         </div>
         <!--Футтер-->
