В home_page добавлен информационные блоки c синей иконкой каплей. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,11 @@
                         <div class="icon icon--ligthinig-blue"></div>
                     </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Expert Witness</span>
                 </div>
+                <div class="unit">
+                    <div class="icon icon--blue-square">
+                        <div class="icon icon--raindrop"></div>
+                    </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Construction</span>
+                </div>
             </div>
         </div>
         <!--Футтер-->
