--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,17 @@
                         <div class="icon icon--raindrop"></div>
                     </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Construction</span>
                 </div>
+                <div class="unit unit--theme-blue">
+                    <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--white-text">News</h2>
+                    <p class="unit__info unit__info--norm-text unit__info--white-blue-text">12 february, 2015</p>
+                    <h3 class="unit__title unit__title--bold unit__title--white-text">Project Design and Engineering Services</h3>
+                    <p class="unit__info unit__info--norm-text unit__info--white-blue-text">23 comments</p>
+                    <div class="unit__horiz-inline-wrap">
+                        <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--inline">
+                        <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
+                        <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
+                    </div>
+                </div>
             </div>
         </div>
         <!--Футтер-->
