--- a/app/index.html
+++ b/app/index.html
@@ -118,6 +118,13 @@
                         <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
                     </div>
                 </div>
+                <div class="unit unit--white">
+                    <div class="unit__person-info-wrap">
+                        <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold-text unit__info--black-text">David Mc. Adams</span>
+                        <div class="icon icon--person-rate4"></div>
+                    </div>
+                    <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--gray-text">In most urban areas, construction has already built existing structures, many having been standing for decades.</p>
+                </div>
             </div>
         </div>
         <!--Футтер-->
