В home_page добавлен информационный блок c синей иконкой settig-tool. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,11 @@
                     </div>
                     <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--gray-text">In most urban areas, construction has already built existing structures, many having been standing for decades.</p>
                 </div>
+                <div class="unit">
+                    <div class="icon icon--blue-square">
+                        <div class="icon icon--setting-tool-blue"></div>
+                    </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Procurement</span>
+                </div>
             </div>
         </div>
         <!--Футтер-->
