В home_page добавлен информационный блок c синей иконкой light-bolb. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,11 @@
                         <div class="icon icon--setting-tool-blue"></div>
                     </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Procurement</span>
                 </div>
+                <div class="unit unit--white">
+                    <div class="icon icon--blue-square">
+                        <div class="icon icon--light-bulb"></div>
+                    </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Project Managments</span>
+                </div>
             </div>
         </div>
         <!--Футтер-->
