В home_page добавлен информационный блок c иконкой icon-star на желтом фоне. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,11 @@
                         <div class="icon icon--light-bulb"></div>
                     </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Project Managments</span>
                 </div>
+                <div class="unit unit--theme-yellow">
+                    <div class="unit__download-price-wrap">
+                        <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-text unit__info--black-text">Work with us</span>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Футтер-->
