В home_page добавлен информационный блок c полем поиска E-mail на синем фоне. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,21 @@
                         <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-text unit__info--black-text">Work with us</span>
                     </div>
                 </div>
+                <div class="unit unit--theme-info">
+                    <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
+                    <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/09</sup></span></div>
+                    <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
+                </div>
+                <div class="unit unit--theme-blue">
+                    <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--white-text">subscribe</h2>
+                    <hr class="unit__horizontal unit__horizontal--white-solid">
+                    <div class="unit__inner-form-aside">
+                        <form class="form">
+                            <input class="form__input form__input--theme-unit-search-white" type="text" name="email" value="E-mail">
+                            <input class="form__submit form__submit--theme-link-submit form__submit--small-text form__submit--white-text" type="submit" value="sign up">
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Футтер-->
