В home_page блоки собраны в необходимом порядке. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -20,11 +20,14 @@
                     <p class="unit__article unit__article--theme-unit-black-text">Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.</p>
                     <input class="button button--theme-unit-btn button--black-bg button--text-white unit__button-buttom-left" type="button" value="Read more">
                 </div>
+                <div class="unit"></div>
                 <div class="unit unit--theme-info">
                     <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
                     <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/03</sup></span></div>
                     <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
                 </div>
+                <div class="unit"></div>
+                <div class="unit"></div>
                 <div class="unit unit--theme-company-video unit--theme-blue">
                     <div class="unit__company-video-wrap">
                         <button class="icon icon--theme-circle icon--blue-bg">
@@ -32,6 +35,7 @@
                         </button><span class="unit__info unit__info--small-text unit__info--white-text">Company video</span>
                     </div>
                 </div>
+                <div class="unit"></div>
                 <div class="unit unit--theme-info">
                     <h2 class="unit__title unit__title--big-bold unit__title--text-width">Our services</h2>
                     <hr class="unit__horizontal unit__horizontal--black-solid">
@@ -42,6 +46,12 @@
                     <h3 class="unit__title unit__title--bold unit__title--text-width">General Contracting</h3>
                     <hr class="unit__horizontal unit__horizontal--black-solid">
                     <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                </div>
+                <div class="unit"></div>
+                <div class="unit unit--theme-info">
+                    <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
+                    <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">03<sup class="unit__info unit__info--med-text unit__info--black-text">/06</sup></span></div>
+                    <input class="button button--theme-arrow button--arrow-prev-hover button--white-bg unit__button-center" type="button" value="">
                 </div>
                 <div class="unit unit--white">
                     <h2 class="unit__title unit__title--bold unit__title--text-width">Project design and engineering</h2>
