Стили для main вынесены в отдельный файл. Временно отключен header

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <!-- Шапка сайта-->
         <!--include header/header.pug-->
         <!--Тело сайта-->
-        <div class="main main_theme-white-gr">
+        <div class="main main--theme-white-gr">
             <!-- Контент для тела сайта-->
             <div class="main__content main__content-inner main__content_theme-grey">
                 <div class="unit unit--horizontal-double-unit unit--theme-yellow">
