--- a/app/index.html
+++ b/app/index.html
@@ -9,17 +9,17 @@
     </head>
     <body>
         <!-- Шапка сайта-->
-        <header class="header">
+        <header class="header header--theme-home-page">
             <!-- Фон для шапки сайта-->
-            <div class="header__bg header__bg-inner header__bg_theme-gray"></div>
+            <div class="header__bg header__bg-inner header__bg_theme-gray header__bg--height-home-page"></div>
             <!-- Контент для шапки-->
             <div class="header__content header__content-inner">
                 <!--Фон в контенте шапки-->
-                <div class="header__content-bg header__content-bg-inner header__content-bg_theme-gray"></div>
+                <div class="header__content-bg header__content-bg-inner header__content-bg_theme-gray header__content-bg--height-home-page"></div>
                 <!--Контейнер в контенте шапки для содержимого типа лого, меню и т.д-->
                 <div class="header__container header__content-container-inner">
                     <!-- Блок для Лого-->
-                    <div class="logo"><a class="logo__text logo__text_middle-right-place" href="#">fdn</a></div>
+                    <div class="logo logo--theme-home-page"><a class="logo__text logo__text--text-black logo__text-inner" href="#">fdn</a></div>
                     <!--Блок для меню-->
                     <div class="menu content__menu">
                         <ul class="menu__items">
@@ -33,8 +33,6 @@
                             <li class="menu__item menu__item_icon-theme"><img src="../img/menu.png" alt="меню"></li>
                         </ul>
                     </div>
-                    <!-- Название страницы-->
-                    <div class="caption content__caption"><span class="caption__text">our services</span></div>
                 </div>
             </div>
         </header>
