Для шапки home-page добавлен фон для правой части страницы.

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
         <header class="header header--theme-home-page">
             <!-- Фон для шапки сайта-->
             <div class="header__bg header__bg-inner header__bg_theme-gray header__bg--height-home-page"></div>
+            <div class="header__bg header__bg-inner header__bg--theme-dark-grey header__bg--height-home-page header__bg--part-right"></div>
             <!-- Контент для шапки-->
             <div class="header__content header__content-inner">
                 <!--Фон в контенте шапки-->
